--- a/pickle-ui/src/app/sidebar/favorites/favorites.component.html
+++ b/pickle-ui/src/app/sidebar/favorites/favorites.component.html
@@ -1,6 +1,6 @@
 <section class="p-1" *ngIf="!anonymous">
 
-<h3 class="text-l font-bold">Favorites</h3>
+<h3 class="text-lg font-bold">Favorites</h3>
 
 <div *ngIf="!favorites || favorites.length === 0">
   No favorites added
