--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -1,7 +1,7 @@
-<h2 class="flex-row gap5 alignleft">
+<h2 class="flex-row gap5 alignleft text-xl font-bold">
   <span matTooltip="{{date | date: 'MMMM d, yyyy'}}">{{court.name}} ({{court.org}})</span>
-  <i *ngIf="!favorite && !anonymous" class="fa-regular fa-star pointer" matTooltip="Add to favorites" (click)="addToFavorites()"></i>
-  <i *ngIf="favorite && !anonymous" class="fa-solid fa-star pointer gold" matTooltip="Remove from favorites" (click)="removeFromFavorites()" [class.spin]="spinning"></i>
+  <i *ngIf="!favorite && !anonymous" class="fa-regular fa-star pointer text-3xl" matTooltip="Add to favorites" (click)="addToFavorites()"></i>
+  <i *ngIf="favorite && !anonymous" class="fa-solid fa-star pointer gold text-3xl" matTooltip="Remove from favorites" (click)="removeFromFavorites()" [class.spin]="spinning"></i>
 </h2>
 <div>Schedule: {{schedStart}} to {{schedEnd}}</div>
 <div *ngIf="message">{{message}}</div>
