--- a/pickle-ui/src/app/header/login/login.component.scss
+++ b/pickle-ui/src/app/header/login/login.component.scss
@@ -5,6 +5,15 @@
   object-fit: cover; /* Ensures image covers the area */
 }
 
+.login-button {
+  padding: 0; /* Remove default button padding if using mat-icon-button */
+  line-height: 1; /* Adjust line height to center image */
+  height: auto; /* Allow height to adjust to content */
+  width: auto; /* Allow width to adjust to content */
+  width: 160px; /* Adjust size as needed */
+  height: 60px;
+}
+
 .profile-button {
   padding: 0; /* Remove default button padding if using mat-icon-button */
   line-height: 1; /* Adjust line height to center image */
@@ -18,5 +27,8 @@
   //mobile banner
   .welcome-text {
     display: none;
+  }
+  .login-button {
+    width: 60px; /* Adjust size as needed */
   }
 }
