--- a/pickle-ui/src/app/sidebar/sidebar/sidebar.component.html
+++ b/pickle-ui/src/app/sidebar/sidebar/sidebar.component.html
@@ -1,13 +1,13 @@
 <div class="flex-column collapsible-sidebar" [class.collapsed]="isCollapsed">
 
 <div class="flex-row header" (click)="toggleCollapse()">
-  <h4 class="text-xl font-bold p-1" *ngIf="!isCollapsed">Hide courts</h4>
+  <h4 class="text-m font-bold p-1" *ngIf="!isCollapsed">Hide courts</h4>
   <i 
     class="fa-solid" 
     [class.fa-chevron-left]="!isCollapsed" 
     [class.fa-chevron-right]="isCollapsed"
   ></i>
-  <h5 class="text-xl font-bold p-1" *ngIf="isCollapsed">Show courts</h5>
+  <h5 class="text-m font-bold p-1" *ngIf="isCollapsed">Show courts</h5>
 </div>
 
 <app-favorites (master)="afterFavoritesDisplayed($event)"></app-favorites>
