--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -8,4 +8,5 @@
 <div *ngIf="error" style="color: red">{{error}}</div>
 <div class="calendar-wrapper">
   <full-calendar #fullcalendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
+  <ngx-skeleton-loader count="6" *ngIf="!calendarOptions"></ngx-skeleton-loader>
 </div>
