--- a/pickle-ui/src/app/header/login/login.component.html
+++ b/pickle-ui/src/app/header/login/login.component.html
@@ -15,8 +15,8 @@
 <!-- The menu template -->
 <mat-menu #profileMenu="matMenu">
   <button mat-menu-item routerLink="/landing">
-    <mat-icon>person</mat-icon>
-    <span>Profile</span>
+    <mat-icon>calendar_today</mat-icon>
+    <span>Court schedules</span>
   </button>
   <button mat-menu-item routerLink="/owner">
     <mat-icon>leaderboard</mat-icon>
