--- a/pickle-ui/src/app/sidebar/favorites/favorites.component.html
+++ b/pickle-ui/src/app/sidebar/favorites/favorites.component.html
@@ -12,7 +12,7 @@
       [checked]="court.checked"
       (change)="onCheckUncheck(court, $event)"
     >
-      {{ court.name }} ({{ court.org }})
+      {{ court.name }} ({{ court.orgName }})
     </mat-checkbox>
   </mat-list-item>
 </mat-list>
