--- a/pickle-ui/src/app/booking/booking/booking.component.html
+++ b/pickle-ui/src/app/booking/booking/booking.component.html
@@ -6,7 +6,7 @@
     <li>Date: {{booking.start | date: 'MMMM d' }}</li>
     <li>Start: {{ booking.start | date: 'h:mm a' }}</li>
     <li>End: {{ booking.end | date: 'h:mm a' }}</li>
-    <li>Location: {{court?.org}}</li>
+    <li>Location: {{court?.orgName}}</li>
     <li>Court: {{court?.name}}</li>
     <li>Paid: {{booking.paid ? 'Yes' : 'No'}}</li>
 </ul>
