--- a/pickle-ui/src/app/owner/dialogs/register-court/register-court.component.html
+++ b/pickle-ui/src/app/owner/dialogs/register-court/register-court.component.html
@@ -9,11 +9,11 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Court Name</mat-label>
       <input matInput formControlName="name" required />
-      <mat-error *ngIf="form.controls['name']?.hasError('required') && form.controls['name']?.touched">
+      <mat-error *ngIf="nameCtrl?.hasError('required') && form.controls['name']?.touched">
         Name is required.
       </mat-error>
-      <mat-error *ngIf="form.controls['name']?.hasError('maxlength') && form.controls['name']?.touched">
-        Name must not exceed 20 characters.
+      <mat-error *ngIf="(nameCtrl?.hasError('minlength') || nameCtrl?.hasError('maxlength')) && form.controls['name']?.touched">
+        Name must between 4 and 20 characters long.
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline" class="full-width">
