--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,5 +1,5 @@
-<div class="flex-row landing">
 <app-sidebar></app-sidebar>
+<div class="flex-row landing p-4">
 <div class="calendars-container flex-column">
   <div class="calendar-controls flex-row my-4" *ngIf="!bookingRequest && !booking" @fadeIn>
     <h1 class="text-xl font-bold my-4">{{ date | date: 'MMMM d, yyyy'}}</h1>
