--- a/pickle-ui/src/styles.scss
+++ b/pickle-ui/src/styles.scss
@@ -42,3 +42,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.p-4 {
+  padding: 1rem;
+}
