little bit more work on owner

--- a/pickle-ui/src/app/header/login/login.component.html
+++ b/pickle-ui/src/app/header/login/login.component.html
@@ -16,11 +16,11 @@
 <mat-menu #profileMenu="matMenu">
   <button mat-menu-item routerLink="/landing">
     <mat-icon>calendar_today</mat-icon>
-    <span>Court schedules</span>
+    <span>Booking view</span>
   </button>
   <button mat-menu-item routerLink="/owner">
     <mat-icon>leaderboard</mat-icon>
-    <span>Owner dashboard</span>
+    <span>Owner view</span>
   </button>
   <button mat-menu-item (click)="logout()">
     <mat-icon>logout</mat-icon>
