--- a/pickle-ui/src/app/header/header/header.component.scss
+++ b/pickle-ui/src/app/header/header/header.component.scss
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   padding: 0 1rem;
-  height: 200px; /* set height as needed */
+  height: 12.5rem; /* 200px */
   background-image: url('https://i.imgur.com/iKWVrUj.png');
-  background-position: center 0%;
   background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 1920px auto; /* lock to 1080p width */
 }
 
 .left-spacer,
@@ -30,7 +31,12 @@
 @media (min-width: 1024px) {
   //wide banner
   .header-container {
-    background-size: 25%;
+    background-size: 25vw auto;
+  }
+}
+@media (min-width: 2560px) {
+  .header-container {
+    background-size: 18vw auto; /* or another responsive value */
   }
 }
 @media (max-width: 1024px) {
