handle the 400 on time slot block

--- a/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.scss
+++ b/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.scss
@@ -1,3 +1,11 @@
 .slotcontrol-wrapper {
   padding: 10px;
 }
+
+.checkout-container {
+  gap: 5px;
+}
+
+.slotcontrol-buttons {
+  margin-top: 20px;
+}
