--- a/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.html
+++ b/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.html
@@ -1,10 +1,24 @@
 <div class="slotcontrol-wrapper">
-  <app-owner-slotcontrol
-    *ngIf="bookingRequest && court"
-    [booking]="bookingRequest"
-    [court]="court"
-    (cancelEvent)="cancel()"
-    (bookingCreatedEvent)="onBookingCreatedEvent()"
-  >
-  </app-owner-slotcontrol>
+  <div class="checkout-container" @fadeIn>
+    <h1>Time slot management</h1>
+    <div class="flex-col gap5">
+      <div>{{message}}</div>
+  
+      <ng-container *ngIf="error" @fadeIn>
+        <app-errorcard *ngIf="error" [error]="error"></app-errorcard>
+        <div class="flex-row gap5 alignleft slotcontrol-buttons">
+          <button mat-flat-button color="default" (click)="cancel()">Back to calendar</button>
+        </div>
+      </ng-container>
+  
+      <div class="flex-column gap5" *ngIf="!error" @fadeIn>
+        <p>{{checkoutMessage}}</p>
+        <div class="flex-row gap5 alignleft slotcontrol-buttons">
+          <button mat-button color="default" (click)="cancel()">Cancel</button>
+          <button mat-raised-button color="accent" (click)="block()">Block timeslot</button>
+          <button mat-raised-button color="accent" (click)="openPlay()">Make Open play</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
