--- a/pickle-ui/src/app/owner/dashboard/dashboard.component.html
+++ b/pickle-ui/src/app/owner/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
 
 <section *ngIf="org">
   You are the owner of {{org.name}}
-  <app-calendarcontrol></app-calendarcontrol>
+  <app-calendarcontrol (onDateChange)="onDateChange($event)"></app-calendarcontrol>
   <div class="calendar-container flex-row">
     <div *ngFor="let court of courts$ | async" class="calendar-sub-container">
       <app-courtcalendar [court]="court" [date]="date" (slotSelected)="onSlotSelected(court, $event)" (eventSelected)="onEventSelected(court, $event)" [@fadeInOut]></app-courtcalendar>
