--- a/pickle-ui/src/app/owner/dialogs/slotselect/blockcontrol/blockcontrol.component.html
+++ b/pickle-ui/src/app/owner/dialogs/slotselect/blockcontrol/blockcontrol.component.html
@@ -5,6 +5,12 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Title</mat-label>
       <input #titleInput matInput formControlName="title" />
+      <mat-error *ngIf="titleCtrl?.hasError('required') && titleCtrl?.touched">
+        Title is required.
+      </mat-error>
+      <mat-error *ngIf="(titleCtrl?.hasError('minlength') || titleCtrl?.hasError('maxlength')) && titleCtrl?.touched">
+        Title must between 4 and 20 characters long.
+      </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Court</mat-label>
@@ -12,11 +18,11 @@
     </mat-form-field>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Start time</mat-label>
-      <input matInput formControlName="start" readonly>
+      <input matInput formControlName="startStr" readonly>
     </mat-form-field>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>End time</mat-label>
-      <input matInput formControlName="end" readonly>
+      <input matInput formControlName="endStr" readonly>
     </mat-form-field>
 
   </div>
