--- a/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.html
+++ b/pickle-ui/src/app/owner/dialogs/slotselect/slotselect.component.html
@@ -14,7 +14,7 @@
       <div class="flex-column gap5" *ngIf="!error" @fadeIn>
         <p>{{checkoutMessage}}</p>
         <div class="flex-row gap5 alignleft slotcontrol-buttons">
-          <button mat-button color="default" (click)="cancel()">Cancel</button>
+          <button mat-button color="default" (click)="cancel()" class="unselect">Cancel</button>
           <button mat-raised-button color="accent" (click)="block()">Block timeslot</button>
           <button mat-raised-button color="accent" (click)="openPlay()">Make Open play</button>
         </div>
