--- a/pickle-ui/src/app/header/login/login.component.html
+++ b/pickle-ui/src/app/header/login/login.component.html
@@ -22,6 +22,10 @@
     <mat-icon>leaderboard</mat-icon>
     <span>Owner view</span>
   </button>
+  <button *ngIf="admin" mat-menu-item routerLink="/landing">
+    <mat-icon>admin_panel_settings</mat-icon>
+    <span>Admin view</span>
+  </button>
   <button mat-menu-item (click)="logout()">
     <mat-icon>logout</mat-icon>
     <span>Logout</span>
