--- a/pickle-ui/src/app/owner/dialogs/slotselect/openplaycontrol/openplaycontrol.component.html
+++ b/pickle-ui/src/app/owner/dialogs/slotselect/openplaycontrol/openplaycontrol.component.html
@@ -38,6 +38,6 @@
   </div>
   <div mat-dialog-actions align="end">
     <button mat-button type="button" (click)="cancel()">Cancel</button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid" class="unselect">Create Open Play</button>
   </div>
 </form>
